--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,7 +6,7 @@
       <h1>Editing Book</h1>
       <div id="error_explanation">
         <% if @book.errors.any? %>
-          <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+          <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
           <ul>
             <% @book.errors.full_messages.each do |message| %>
               <li><%= message %></li>
@@ -24,10 +24,10 @@
           <%= f.text_area :body, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.submit "Create Book", class: 'btn btn-success' %>
+          <%= f.submit "Update Book", class: 'btn btn-success' %>
         </div>
       <% end %>
-      <%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", :back %>
+      <%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", books_path %>
     </div>
   </div>
 </div>
